[tool.poetry]
name = "kwbar"
version = "0.1.1a6"
description = "Print kwargs as a bar chart."
authors = ["John Pocock <pypi@pocock.io>"]
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
